# llm-data-extraction

./: .gitignore  Dockerfile  LICENSE  README.md  pytest.ini  request_1.json  request_2.json  request_3.json  setup.cfg
llm_data_extraction/: chains.py  log_callback_handler.py  main.py  prompts.py  templates.py
tests/: test_chains.py
