[metadata]
name = llm-data-extraction
version = 0.1.0
author = Borys Biletskyy
description = LLM-based structured data extraction from conversation transcripts
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:

python_requires = >=3.6
install_requires =
    langchain==0.2.11
    langchain-openai==0.1.19
    fastapi==0.111.1
    langserve==0.2.2
    sse_starlette==2.1.2
    uvicorn==0.30.3
    loguru==0.7.2


[options.extras_require]
dev =
    pytest

[tool:pytest]
testpaths = tests

